assignment-3/src/main/bkit/parser/.antlr/BKITParser.py
# Generated from /home/scotlandyard/201/ppl/assignment3/initial/src/main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'['", "']'", "'{'", "'}'", 
                     "':'", "';'", "'.'", "','", "'Body'", "'Break'", "'Continue'", 
                     "'Do'", "'Else'", "'ElseIf'", "'EndBody'", "'EndIf'", 
                     "'EndFor'", "'EndWhile'", "'For'", "'Function'", "'If'", 
                     "'Parameter'", "'Return'", "'Then'", "'Var'", "'While'", 
                     "'True'", "'False'", "'EndDo'", "'='", "'+'", "'-'", 
                     "'*'", "'\\'", "'%'", "'=='", "'!='", "'>'", "'<'", 
                     "'>='", "'<='", "'+.'", "'-.'", "'*.'", "'\\.'", "'>.'", 
                     "'<.'", "'>=.'", "'<=.'", "'=/='", "'!'", "'&&'", "'||'" ]

    symbolicNames = [ "<INVALID>", "LP", "RP", "LSB", "RSB", "LCB", "RCB", 
                      "COLON", "SEMICOLON", "DOT", "COMMA", "BODY", "BREAK", 
                      "CONTINUE", "DO", "ELSE", "ELSEIF", "ENDBODY", "ENDIF", 
                      "ENDFOR", "ENDWHILE", "FOR", "FUNCTION", "IF", "PARAMETER", 
                      "RETURN", "THEN", "VAR", "WHILE", "TRUE", "FALSE", 
                      "ENDDO", "EQUAL", "ADD_OP_INT", "SUB_OP_INT", "MUL_OP_INT", 
                      "DIV_OP_INT", "MOD_OP_INT", "EQUAL_OP_INT", "NOT_EQUAL_OP_INT", 
                      "GREATER_OP_INT", "LESS_OP_INT", "GREATER_EQUAL_OP_INT", 
                      "LESS_EQUAL_OP_INT", "ADD_OP_FLOAT", "SUB_OP_FLOAT", 
                      "MUL_OP_FLOAT", "DIV_OP_FLOAT", "GREATER_OP_FLOAT", 
                      "LESS_OP_FLOAT", "GREATER_EQUAL_OP_FLOAT", "LESS_EQUAL_OP_FLOAT", 
                      "NOT_EQUAL_OP_FLOAT", "NOT_OP", "AND_OP", "OR_OP", 
                      "INTEGER", "FLOAT", "IDENTIFIER", "STRING", "WS", 
                      "COMMENT", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_glo_variable_dec = 1
    RULE_list_var = 2
    RULE_var_elem = 3
    RULE_var_init = 4
    RULE_var = 5
    RULE_variable_id = 6
    RULE_value = 7
    RULE_array = 8
    RULE_array_elem = 9
    RULE_literal = 10
    RULE_unary_int = 11
    RULE_unary_float = 12
    RULE_boolean = 13
    RULE_function_dec = 14
    RULE_list_sta = 15
    RULE_parameter_dec = 16
    RULE_list_param = 17
    RULE_statement = 18
    RULE_if_sta = 19
    RULE_list_else_sta = 20
    RULE_for_sta = 21
    RULE_while_sta = 22
    RULE_do_while_sta = 23
    RULE_break_sta = 24
    RULE_continue_sta = 25
    RULE_call_sta = 26
    RULE_list_exp = 27
    RULE_return_sta = 28
    RULE_variable_dec = 29
    RULE_assignment_sta = 30
    RULE_left_operand = 31
    RULE_exp = 32
    RULE_exp1 = 33
    RULE_exp2 = 34
    RULE_exp3 = 35
    RULE_exp4 = 36
    RULE_exp5 = 37
    RULE_exp6 = 38
    RULE_name_index_op = 39
    RULE_index_operators = 40
    RULE_function_call = 41
    RULE_exp8 = 42

    ruleNames =  [ "program", "glo_variable_dec", "list_var", "var_elem", 
                   "var_init", "var", "variable_id", "value", "array", "array_elem", 
                   "literal", "unary_int", "unary_float", "boolean", "function_dec", 
                   "list_sta", "parameter_dec", "list_param", "statement", 
                   "if_sta", "list_else_sta", "for_sta", "while_sta", "do_while_sta", 
                   "break_sta", "continue_sta", "call_sta", "list_exp", 
                   "return_sta", "variable_dec", "assignment_sta", "left_operand", 
                   "exp", "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", 
                   "name_index_op", "index_operators", "function_call", 
                   "exp8" ]

    EOF = Token.EOF
    LP=1
    RP=2
    LSB=3
    RSB=4
    LCB=5
    RCB=6
    COLON=7
    SEMICOLON=8
    DOT=9
    COMMA=10
    BODY=11
    BREAK=12
    CONTINUE=13
    DO=14
    ELSE=15
    ELSEIF=16
    ENDBODY=17
    ENDIF=18
    ENDFOR=19
    ENDWHILE=20
    FOR=21
    FUNCTION=22
    IF=23
    PARAMETER=24
    RETURN=25
    THEN=26
    VAR=27
    WHILE=28
    TRUE=29
    FALSE=30
    ENDDO=31
    EQUAL=32
    ADD_OP_INT=33
    SUB_OP_INT=34
    MUL_OP_INT=35
    DIV_OP_INT=36
    MOD_OP_INT=37
    EQUAL_OP_INT=38
    NOT_EQUAL_OP_INT=39
    GREATER_OP_INT=40
    LESS_OP_INT=41
    GREATER_EQUAL_OP_INT=42
    LESS_EQUAL_OP_INT=43
    ADD_OP_FLOAT=44
    SUB_OP_FLOAT=45
    MUL_OP_FLOAT=46
    DIV_OP_FLOAT=47
    GREATER_OP_FLOAT=48
    LESS_OP_FLOAT=49
    GREATER_EQUAL_OP_FLOAT=50
    LESS_EQUAL_OP_FLOAT=51
    NOT_EQUAL_OP_FLOAT=52
    NOT_OP=53
    AND_OP=54
    OR_OP=55
    INTEGER=56
    FLOAT=57
    IDENTIFIER=58
    STRING=59
    WS=60
    COMMENT=61
    ERROR_CHAR=62
    UNCLOSE_STRING=63
    ILLEGAL_ESCAPE=64
    UNTERMINATED_COMMENT=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def glo_variable_dec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Glo_variable_decContext)
            else:
                return self.getTypedRuleContext(BKITParser.Glo_variable_decContext,i)


        def function_dec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Function_decContext)
            else:
                return self.getTypedRuleContext(BKITParser.Function_decContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 86
                self.glo_variable_dec()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNCTION:
                self.state = 92
                self.function_dec()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 98
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Glo_variable_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def SEMICOLON(self):
            return self.getToken(BKITParser.SEMICOLON, 0)

        def list_var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.List_varContext)
            else:
                return self.getTypedRuleContext(BKITParser.List_varContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_glo_variable_dec




    def glo_variable_dec(self):

        localctx = BKITParser.Glo_variable_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_glo_variable_dec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(BKITParser.VAR)
            self.state = 101
            self.match(BKITParser.COLON)
            self.state = 103 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 102
                self.list_var()
                self.state = 105 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKITParser.IDENTIFIER):
                    break

            self.state = 107
            self.match(BKITParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_varContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_elem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_elemContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_elemContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_list_var




    def list_var(self):

        localctx = BKITParser.List_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_list_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.var_elem()
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 110
                self.match(BKITParser.COMMA)
                self.state = 111
                self.var_elem()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_elemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(BKITParser.VarContext,0)


        def var_init(self):
            return self.getTypedRuleContext(BKITParser.Var_initContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_var_elem




    def var_elem(self):

        localctx = BKITParser.Var_elemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_elem)
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.var()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.var_init()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_initContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_id(self):
            return self.getTypedRuleContext(BKITParser.Variable_idContext,0)


        def EQUAL(self):
            return self.getToken(BKITParser.EQUAL, 0)

        def value(self):
            return self.getTypedRuleContext(BKITParser.ValueContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_var_init




    def var_init(self):

        localctx = BKITParser.Var_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_init)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.variable_id()
            self.state = 122
            self.match(BKITParser.EQUAL)
            self.state = 123
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_id(self):
            return self.getTypedRuleContext(BKITParser.Variable_idContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_var




    def var(self):

        localctx = BKITParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.variable_id()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_idContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(BKITParser.IDENTIFIER, 0)

        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LSB)
            else:
                return self.getToken(BKITParser.LSB, i)

        def INTEGER(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INTEGER)
            else:
                return self.getToken(BKITParser.INTEGER, i)

        def RSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RSB)
            else:
                return self.getToken(BKITParser.RSB, i)

        def getRuleIndex(self):
            return BKITParser.RULE_variable_id




    def variable_id(self):

        localctx = BKITParser.Variable_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variable_id)
        self._la = 0 # Token type
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.match(BKITParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.match(BKITParser.IDENTIFIER)
                self.state = 132 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 129
                    self.match(BKITParser.LSB)
                    self.state = 130
                    self.match(BKITParser.INTEGER)
                    self.state = 131
                    self.match(BKITParser.RSB)
                    self.state = 134 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==BKITParser.LSB):
                        break

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(BKITParser.LiteralContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_value




    def value(self):

        localctx = BKITParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_value)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.literal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(BKITParser.LCB, 0)

        def RCB(self):
            return self.getToken(BKITParser.RCB, 0)

        def array_elem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Array_elemContext)
            else:
                return self.getTypedRuleContext(BKITParser.Array_elemContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_array




    def array(self):

        localctx = BKITParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_array)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(BKITParser.LCB)
            self.state = 142 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 141
                self.array_elem()
                self.state = 144 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.LCB) | (1 << BKITParser.TRUE) | (1 << BKITParser.FALSE) | (1 << BKITParser.INTEGER) | (1 << BKITParser.FLOAT) | (1 << BKITParser.STRING))) != 0)):
                    break

            self.state = 146
            self.match(BKITParser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_elemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ArrayContext)
            else:
                return self.getTypedRuleContext(BKITParser.ArrayContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ValueContext)
            else:
                return self.getTypedRuleContext(BKITParser.ValueContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_array_elem




    def array_elem(self):

        localctx = BKITParser.Array_elemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_array_elem)
        self._la = 0 # Token type
        try:
            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.array()
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKITParser.COMMA:
                    self.state = 149
                    self.match(BKITParser.COMMA)
                    self.state = 150
                    self.array()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.value()
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BKITParser.COMMA:
                    self.state = 154
                    self.match(BKITParser.COMMA)
                    self.state = 155
                    self.value()
                    self.state = 160
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(BKITParser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(BKITParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(BKITParser.STRING, 0)

        def boolean(self):
            return self.getTypedRuleContext(BKITParser.BooleanContext,0)


        def array(self):
            return self.getTypedRuleContext(BKITParser.ArrayContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_literal




    def literal(self):

        localctx = BKITParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_literal)
        try:
            self.state = 168
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.INTEGER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.match(BKITParser.INTEGER)
                pass
            elif token in [BKITParser.FLOAT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.match(BKITParser.FLOAT)
                pass
            elif token in [BKITParser.STRING]:
                self.enterOuterAlt(localctx, 3)
                self.state = 165
                self.match(BKITParser.STRING)
                pass
            elif token in [BKITParser.TRUE, BKITParser.FALSE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 166
                self.boolean()
                pass
            elif token in [BKITParser.LCB]:
                self.enterOuterAlt(localctx, 5)
                self.state = 167
                self.array()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Unary_intContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(BKITParser.INTEGER, 0)

        def SUB_OP_INT(self):
            return self.getToken(BKITParser.SUB_OP_INT, 0)

        def ADD_OP_INT(self):
            return self.getToken(BKITParser.ADD_OP_INT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_unary_int




    def unary_int(self):

        localctx = BKITParser.Unary_intContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_unary_int)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ADD_OP_INT or _la==BKITParser.SUB_OP_INT:
                self.state = 170
                _la = self._input.LA(1)
                if not(_la==BKITParser.ADD_OP_INT or _la==BKITParser.SUB_OP_INT):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 173
            self.match(BKITParser.INTEGER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Unary_floatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT(self):
            return self.getToken(BKITParser.FLOAT, 0)

        def SUB_OP_FLOAT(self):
            return self.getToken(BKITParser.SUB_OP_FLOAT, 0)

        def ADD_OP_FLOAT(self):
            return self.getToken(BKITParser.ADD_OP_FLOAT, 0)
